# yolo-cercospora-zeae-maydis

./: README.md
backend/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: endpoints.py
backend/app/core/: model_manager.py  predictor.py
backend/app/utils/: image_utils.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActionButtons.jsx  Footer.jsx  Header.jsx  ImageUploader.jsx  ResultDisplay.jsx
frontend/src/hooks/: useImageUpload.js
